--- a/final_project_wav2vec2.ipynb
+++ b/final_project_wav2vec2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "final_project_wav2vec2.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -1057,6 +1058,21 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "jFbdt3w2rS7D"
+      },
+      "source": [
+        "## uncomment the following lines if you want to test the raw pretrained model\n",
+        "## otherwise it tests the above finetuned model\n",
+        "\n",
+        "# processor = Wav2Vec2Processor.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
+        "# model = Wav2Vec2ForCTC.from_pretrained(\"facebook/wav2vec2-base-960h\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "DlOHtcs-3g_h"
       },
       "source": [
@@ -1072,9 +1088,14 @@
         "    logits = model(input_values).logits\n",
         "\n",
         "  pred_ids = torch.argmax(logits, dim=-1)\n",
-        "  batch[\"pred_str\"] = processor.batch_decode(pred_ids)[0]#.lower()\n",
+        "  batch[\"pred_str\"] = processor.batch_decode(pred_ids)[0]\n",
+        "  batch[\"pred_str\"] = batch[\"pred_str\"].replace(\"<s>\", \"\").replace(\"</s>\", \"\").lower()\n",
+        "\n",
+        "  batch['target_text'] = batch['target_text'].reaplce(\"|\", \" \")\n",
+        "                            .replace(\"<s>\", \"\").replace(\"</s>\", \"\").lower()\n",
         "\n",
         "  return batch\n",
+        "\n",
         "\n",
         "results = knnw[\"train\"].map(map_to_result)"
       ],
