made notebooks easily runnable

--- a/Final_Result_Visualizations.ipynb
+++ b/Final_Result_Visualizations.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 785 Final Project Result Visualizations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,10 +19,9 @@
     "from matplotlib import pyplot as plt\n",
     "import os\n",
     "import json\n",
-    "from scipy.interpolate import make_interp_spline, BSpline\n",
     "\n",
-    "data_dir = \"/Users/gh/Desktop/final_data/\"\n",
-    "experiment_list = [folder for folder in os.listdir(data_dir) if not folder.startswith(\".\")]\n",
+    "data_dir = \"~/autosubs/final_data/\"\n",
+    "experiment_list = [folder for folder in os.listdir(os.path.expanduser(data_dir)) if not folder.startswith(\".\") and not folder.endswith(\".png\")]\n",
     "exp_to_progress = dict()\n",
     "exp_to_results = dict()\n",
     "columns_needed = ['train_loss', 'eval_gr_dist', 'training_iteration']"
@@ -31,7 +37,7 @@
      "output_type": "stream",
      "text": [
       "Experiments: \n",
-      "['knnw_transfer-wsj_spec17_dist17', 'knnw_transfer-wsj_no-wav_spec7_dist15pt9', 'knnw_no-transfer_wav2vec_nospec_dist28', 'knnw_transfer-wsj_wav2vec_no-spec_dist24', 'knnw_no-transfer_no-wav_spec47_dist26', 'knnw_transfer-wsj_no-wav_no-spec_dist15', 'knnw_transfer-wsj_no-wav_no-spec_no-dropout_dist28', 'knnw_transfer-wsj_spec47_dist17']\n",
+      "['knnw_no-transfer_wav2vec_nospec_dist28', 'knnw_transfer-wsj_no-wav_no-spec_dist15', 'knnw_transfer-wsj_wav2vec_no-spec_dist24', 'knnw_transfer-wsj_no-wav_spec7_dist15pt9', 'knnw_no-transfer_no-wav_spec47_dist26', 'knnw_transfer-wsj_spec17_dist17', 'knnw_transfer-wsj_spec47_dist17', 'knnw_transfer-wsj_no-wav_no-spec_no-dropout_dist28']\n",
       "\n",
       "Visualizations using columns: \n",
       "['train_loss', 'eval_gr_dist', 'training_iteration']\n"
@@ -59,18 +65,7 @@
     "                                 'knnw_transfer-wsj_no-wav_no-spec_dist15': 'Transfer',\n",
     "                                 'knnw_transfer-wsj_no-wav_no-spec_no-dropout_dist28': 'Transfer + No Dropout',\n",
     "                                 'knnw_transfer-wsj_spec47_dist17': 'Transfer + SpecAug @ 47'\n",
-    "                               }\n",
-    "\n",
-    "# exp_clear_names = ['Transfer + SpecAug @ 47'\n",
-    "#                    , 'Transfer + SpecAug @ 17'\n",
-    "#                    , 'Transfer + SpecAug @ 7'\n",
-    "#                    , 'No Transfer + SpecAug @ 47'\n",
-    "#                    , 'No Transfer + Wav2Vec'\n",
-    "#                    # NEED TO ADD THIS ONE , 'No Transfer'\n",
-    "#                    , 'Transfer + Wav2Vec'\n",
-    "#                    , 'Transfer + No Dropout'\n",
-    "#                    , 'Transfer'\n",
-    "#                   ]"
+    "                               }"
    ]
   },
   {
@@ -81,8 +76,8 @@
    "source": [
     "# load experiments into dataframes\n",
     "for exp in experiment_list:\n",
-    "    path1 = os.path.normpath(data_dir + exp + \"/progress.csv\")\n",
-    "    path2 = os.path.normpath(data_dir + exp + \"/result.json\")\n",
+    "    path1 = os.path.expanduser(data_dir + exp + \"/progress.csv\")\n",
+    "    path2 = os.path.expanduser(data_dir + exp + \"/result.json\")\n",
     "    exp_to_progress[exp_file_name_to_clear_name[exp]] = pd.read_csv(path1)[columns_needed]\n",
     "    exp_to_progress[exp_file_name_to_clear_name[exp]]['eval_dist'] = exp_to_progress[exp_file_name_to_clear_name[exp]]['eval_gr_dist']\n",
     "    exp_to_progress[exp_file_name_to_clear_name[exp]]['epoch'] = exp_to_progress[exp_file_name_to_clear_name[exp]]['training_iteration']\n",
@@ -91,25 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp_clear_names = ['Transfer + SpecAug @ 47'\n",
-    "                   , 'Transfer + SpecAug @ 17'\n",
-    "                   , 'Transfer + SpecAug @ 7'\n",
-    "                   , 'No Transfer + SpecAug @ 47'\n",
-    "                   , 'No Transfer + Wav2Vec'\n",
-    "                   # NEED TO ADD THIS ONE , 'No Transfer'\n",
-    "                   , 'Transfer + Wav2Vec'\n",
-    "                   , 'Transfer + No Dropout'\n",
-    "                   , 'Transfer'\n",
-    "                  ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +147,8 @@
     "    plt.title(\"Train Loss (Cross-Entropy)\")\n",
     "    plt.xlabel(\"Epoch\")\n",
     "    plt.ylabel(\"Loss\")\n",
-    "    plt.xlim(0, 250)\n",
+    "    MAX_X_TRAIN = 250\n",
+    "    plt.xlim(0, MAX_X_TRAIN)\n",
     "    plt.ylim(0, 0.75)\n",
     "\n",
     "    for exp_name in exp_clear_names:\n",
@@ -187,15 +165,13 @@
     "    plt.title(\"Evaluation Levenshtein Distance\")\n",
     "    plt.xlabel(\"Epoch\")\n",
     "    plt.ylabel(\"Distance\")\n",
-    "    plt.xlim(0, 250)\n",
+    "    MAX_X_EVAL = 250\n",
+    "    plt.xlim(0, MAX_X_EVAL)\n",
     "    plt.ylim(0, 150)\n",
     "\n",
     "    for exp_name in exp_clear_names:\n",
     "        epochs = exp_to_progress[exp_name]['epoch'].values\n",
     "        eval_lev_dist = exp_to_progress[exp_name]['eval_dist'].values\n",
-    "#         if True:\n",
-    "#             spline = make_interp_spline(epochs, eval_lev_dist, k=5)\n",
-    "#             eval_lev_dist = spline(epochs)\n",
     "        plt.plot(epochs, eval_lev_dist, label=exp_name, linewidth=1)\n",
     "\n",
     "    leg = plt.legend(loc='best', ncol=3, mode=\"expand\", shadow=True, fancybox=True)\n",
@@ -205,6 +181,13 @@
     "plot_train_loss()\n",
     "plot_eval_dist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
